--- a/src/app/shared/components/product/product-box/product-box.component.html
+++ b/src/app/shared/components/product/product-box/product-box.component.html
@@ -120,10 +120,10 @@
 
       <h4>
         {{ productkart?.salePrice | currency:currency?.currency:'symbol' }}
-        <del> <span class="money">
+        <del *ngIf="productkart?.discount > 0"> <span class="money">
             {{ productkart?.price  | currency:currency?.currency:'symbol' }}</span></del>
         <br />
-        <div>{{productkart?.discount}}% off
+        <div *ngIf="productkart?.discount > 0">{{productkart?.discount}}% off
         </div>
 
       </h4>
