--- a/src/app/shop/checkout/checkout.component.html
+++ b/src/app/shop/checkout/checkout.component.html
@@ -23,8 +23,8 @@
                                 <br>
                                 <!-- <a href="javascript:void(0)" (click)="SelectBillingAddress(lstBilling)">Select
                                     Address</a> -->
-                                    <button type="submit" class="btn-solid" (click)="SelectBillingAddress(lstBilling)">
-                                        Deliver to this address
+                                    <button type="submit" class="btn-primary" (click)="SelectBillingAddress(lstBilling)">
+                                      {{checkoutForm.controls['billingAddressId'].value==lstBilling.billingAddressId?'Selected Deliver Address':'Deliver to this address'}}  
                                     </button>
 
                             </address>
@@ -78,13 +78,13 @@
                                     </div>
                                 </div>
                                 <div class="form-group col-md-6 col-sm-6 col-xs-12">
-                                    <div class="field-label">emailId Address</div>
+                                    <div class="field-label">email Address</div>
                                     <input type="text" name="emailId" [formControl]="checkoutForm.controls['emailId']" value="" placeholder="" autocomplete="off">
                                     <div *ngIf="(checkoutForm.controls.emailId.touched || Submitted) && checkoutForm.controls.emailId.errors?.required" class="text text-danger">
-                                        EmailId is required
+                                        Email address is required
                                     </div>
                                     <div *ngIf="(checkoutForm.controls.emailId.touched || Submitted) && checkoutForm.controls.emailId.errors?.emailId" class="text text-danger">
-                                        Invalid emailId
+                                        Invalid email address
                                     </div>
                                 </div>
                                 <div class="form-group col-md-6 col-sm-6 col-xs-6">
@@ -185,7 +185,77 @@
                         <div class="col-lg-7 col-sm-12 col-xs-12">
                             <div class="checkout-details">
                                 <div class="order-box">
-                                    <div class="title-box">
+                                    <table class="table table-bordered table-hover">
+                                        <thead class="thead-dark">
+                                            <tr>
+                                                <th class="thead-dark">
+                                                    Product
+                                                </th>
+                                                <th class="thead-dark">
+                                                    Qty
+                                                </th>
+                                                <th class="thead-dark">
+                                                    Total
+                                                </th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr *ngFor="let product of productSizeColor">
+                                                <td>
+                                                    {{ product?.productName }}
+                                                </td>
+                                                <td>
+                                                    {{ product?.quantity }}
+                                                </td>
+                                                <td>
+                                                    <span style="float: right; font-size: 16px; line-height: 20px;  font-weight: 400;">
+                                                        {{ product.salePrice | currency:productService?.Currency.currency:'symbol' }}</span>
+                                                </td>
+                                            </tr>
+                                            <tr *ngIf='!productSizeColor.length'>
+                                                <td colspan="3">
+                                                    There are no products in cart
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td colspan="2">
+                                                    <b>Subtotal</b>
+                                                </td>
+                                                <td>
+                                                    <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                                    {{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td colspan="2">
+                                                    <b>GST ({{GST}}%)</b>
+                                                </td>
+                                                <td>
+                                                    <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                                        {{ getTotal()*(GST)/100 | currency:productService?.Currency.currency:'symbol'}}</span>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td colspan="2">
+                                                    <b> Shipping</b>
+                                                </td>
+                                                <td>
+                                                    <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                                         <b>Free Shipping</b></span>
+                                                </td>
+                                            </tr>
+                                            <tr class="total">
+                                                <td colspan="2">
+                                                    <b>Total</b>
+                                                </td>
+                                                <td>
+                                                    <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                                        {{ getTotal()+(getTotal()*(GST)/100) | currency:productService?.Currency.currency:'symbol'}}</span>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <!-- <div class="title-box">
                                         <div>Product <span> Total</span></div>
                                     </div>
                                     <ul class="qty" *ngIf='productSizeColor?.length'>
@@ -198,8 +268,8 @@
                                     </ul>
                                     <ul class="qty" *ngIf='!productSizeColor.length'>
                                         <li class="empty-checkout"> There are no products in cart </li>
-                                    </ul>
-                                    <ul class="sub-total">
+                                    </ul> -->
+                                    <!-- <ul class="sub-total">
                                         <li>
                                             Subtotal <span class="count">{{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
                                         </li>
@@ -210,21 +280,14 @@
                                             Shipping
                                             <div class="shipping">
                                                 Free Shipping
-                                                <!-- <div class="shopping-option">
-                                                    <input type="radio" name="shipping" checked="checked" id="free-shipping">
-                                                    <label for="free-shipping">Shipping</label>
-                                                </div>
-                                                <div class="shopping-option">
-                                                    <input type="radio" name="shipping" id="local-pickup">
-                                                    <label for="local-pickup">Local Pickup</label>
-                                                </div> -->
+                                                
                                             </div>
                                         </li>
                                     </ul>
                                     <ul class="total">
                                         <li>Total <span class="count">{{ getTotal()+(getTotal()*(GST)/100) | currency:productService?.Currency.currency:'symbol'}}</span>
                                         </li>
-                                    </ul>
+                                    </ul> -->
                                 </div>
 
                                 <div class="payment-box" *ngIf='productSizeColor?.length'>
