--- a/src/app/shared/header/header-one/header-one.component.html
+++ b/src/app/shared/header/header-one/header-one.component.html
@@ -21,18 +21,21 @@
                          <a [routerLink]="['/shop/wishlist']"><i class="fa fa-heart" aria-hidden="true"></i>Wishlist</a>
                             &nbsp;
                         </li> -->
-                        <li class="onhover-dropdown mobile-account"
-                            *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
+                        <li class="onhover-dropdown mobile-account" *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
                             <span class="Logininfo"><a (click)="Login()" class="btn btn-solid btn-solid-small"><i class="fa fa-user"
                                         aria-hidden="true"></i>Login</a></span>
                         </li>
-                        <li class="onhover-dropdown mobile-account"
-                            *ngIf="LoggedInUser!=[] && LoggedInUser!=undefined && LoggedInUser?.length>0">
+                        <li class="onhover-dropdown mobile-account" *ngIf="LoggedInUser!=[] && LoggedInUser!=undefined && LoggedInUser?.length>0">
                             <i class="fa fa-user" aria-hidden="true"></i> {{LoggedInUser[0].name}}
                             <ul class="onhover-show-div">
                                 <li>
                                     <a data-lng="en" [routerLink]="['/pages/dashboard']">
                                         My Account
+                                    </a>
+                                </li>
+                                <li>
+                                    <a data-lng="en" [routerLink]="['/pages/dashboard/myorder']">
+                                        My Order
                                     </a>
                                 </li>
                                 <li>
