--- a/src/assets/scss/theme/_style.scss
+++ b/src/assets/scss/theme/_style.scss
@@ -14710,3 +14710,31 @@ a.btn-solid:not([href]):hover {
 //   .thumbnail-imgs::-webkit-scrollbar-thumb:hover {
 //     background: #555; 
 //   }
+.home-slider .home {
+    background-position: top center;
+}
+address p {
+    display: inline-block;
+    margin-right: 1rem;
+}
+.capitalize, .step-heading {
+    text-transform: uppercase;
+    font-weight: bold;
+}
+.checkout-steps {
+    background: #fff;
+    box-shadow: 2px 2px 6px rgba(0,0,0,.3);
+    margin-bottom: 1rem;
+    .step-heading, .step-heading+div, .delivery-address {
+        padding: 1.5rem;
+    }
+}
+.checkout-steps {
+    .step-heading {
+        background: #efefef;
+        cursor: pointer;
+    }
+}
+.delivery-address {
+    border-bottom: 1px solid #ececec;
+}
